--- a/index.html
+++ b/index.html
@@ -7,19 +7,26 @@
         <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
+    <main class="contenedor">
         <section>
             <h1>PRACTICAS MULTAS CON PROMESAS</h1>
         </section>
         <section id="sectionBtn">
             
+            <input id="input" type="text">
+            <button id="btn">Comprobar</button>
         </section>
         <section>
-            <table id ="tablaMultas">
+            <table>
                 <thead>
-
+                    <tr>
+                        <th>Matrícula</th>
+                        <th>Modelo</th>
+                        <th>Propietario</th>
+                        <th>Multas</th>
+                    </tr>
                 </thead>
-                <tbody>
+                <tbody id ="tablaMultas">
 
                 </tbody>
             </table>
