cambios asincronia hechos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>PRACTICAS MULTAS CON PROMESAS</h1>
         </section>
         <section id="sectionBtn">
-            
+            <p id="errores"></p>
             <input id="input" type="text">
             <button id="btn">Comprobar</button>
         </section>
