--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             <h1>PRACTICAS MULTAS CON PROMESAS</h1>
         </section>
         <section id="sectionBtn">
-            
-            <input id="input" type="text">
+            <div></div>
+            <input id="input" type="text" placeholder="Tu matricula">
             <button id="btn">Comprobar</button>
+            
         </section>
         <section>
             <table>
